Change colors in header, fix header letter-spacing

--- a/src/css/base.sass
+++ b/src/css/base.sass
@@ -32,7 +32,8 @@ p
 h1, h2, h3
   text-align: center
   line-height: 1.125
-  font-weight: 600
+  font-weight: 400
+  letter-spacing: normal
   margin-bottom: .6em
   margin-top: 1.2em
 h1
