--- a/src/css/config.sass
+++ b/src/css/config.sass
@@ -11,6 +11,7 @@ $base-font-size: 16px
 
 $primary-color: #cd2030
 $light-grey: #fafafa
+$header-item-color: #444
 
 // Header
 $header-height: 4.375rem
