--- a/src/css/header.sass
+++ b/src/css/header.sass
@@ -10,7 +10,7 @@
   right: 0
   z-index: 2
   &, a
-    color: $primary-color
+    color: $header-item-color
 
 .header__logo
   > img
@@ -27,7 +27,6 @@
   padding: 0 .65em
   height: calc(#{$header-height} - 1px)
   line-height: calc(#{$header-height} - 1px)
-  text-transform: uppercase
   transition: .15s ease-in-out
 
   &:hover
